[package]
name = "runtime-common"
version = "1.6.0-c"
authors = ["Pendulum"]
description = "Pendulum runtime common"
homepage = "https://pendulumchain.org"
repository = "https://github.com/pendulum-chain/pendulum"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
paste.workspace = true
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

frame-support = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }

cumulus-pallet-parachain-system = { workspace = true }
cumulus-primitives-core = { workspace = true }

xcm = { workspace = true }
staging-xcm-executor = { workspace = true }

orml-traits = { workspace = true }
orml-asset-registry = { workspace = true }
orml-xcm-support = { workspace = true }

dia-oracle = { workspace = true }
zenlink-protocol = { workspace = true }

spacewalk-primitives = { workspace = true }
treasury-buyout-extension = { path = "../../pallets/treasury-buyout-extension", default-features = false }

[features]
default = [
    "std",
]

std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"xcm/std",
	"staging-xcm-executor/std",
	"orml-traits/std",
	"dia-oracle/std",
	"orml-asset-registry/std",
	"orml-xcm-support/std",
	"zenlink-protocol/std",
	"spacewalk-primitives/std",
	"cumulus-primitives-core/std",
	"treasury-buyout-extension/std",
	"cumulus-pallet-parachain-system/std"
]

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"orml-asset-registry/runtime-benchmarks",
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"treasury-buyout-extension/runtime-benchmarks",
	"dia-oracle/runtime-benchmarks",
	"staging-xcm-executor/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
]
